# LyonPotpourri3.0-MaxMSP

./: CMakeLists.txt  MSPd.h  README.md  package-info.json.in
.github/workflows/: release.yml
Projects/: buildall.pl
Projects/el.adsr~/: adsr~.c
Projects/el.bashfest~/: bashfest_helper.c  bashfest~.c  ellipse.c
Projects/el.buffet~/: buffet~ copy.c  buffet~.c
Projects/el.buffi~/: buffi~.c
Projects/el.bvplay~/: bvplay~.c
Projects/el.chameleon~/: chameleon_dsp.c  chameleon~.c  ugens.h
Projects/el.chopper~/: chopper~.c
Projects/el.clean_gate~/: clean_gate~.c  el.clean_gate~.maxhelp  test clean-gate.maxpat
Projects/el.clickhold~/: clickhold~.c
Projects/el.convolver~/: convolver~.c  fft4_oldskool.c  test convolver copy.maxpat
Projects/el.dmach~/: dmach~.c
Projects/el.killdc~/: killdc~.c
help/: el.splitbank~.maxhelp
source/Projects/el.magfreq_analysis~/: CMakeLists.txt  convert.c  fold.c  limit_fftsize.c  magfreq_analysis~.c  makewindows.c
source/Projects/el.magfreq_analysis~/el.magfreq_analysis~.xcodeproj/project.xcworkspace/xcuserdata/ericlyon.xcuserdatad/: UserInterfaceState.xcuserstate
source/Projects/el.magfreq_analysis~/el.magfreq_analysis~.xcodeproj/xcuserdata/eric.xcuserdatad/xcschemes/: max-external.xcscheme
source/Projects/el.sel~/: CMakeLists.txt
source/Projects/el.sel~/el.sel~.xcodeproj/: project.pbxproj
source/Projects/el.sel~/el.sel~.xcodeproj/project.xcworkspace/xcuserdata/eric.xcuserdatad/: UserInterfaceState.xcuserstate
source/Projects/el.sel~/el.sel~.xcodeproj/xcuserdata/eric.xcuserdatad/xcschemes/: max-external.xcscheme
(+410 files in other folders)
